--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <br>
             <br>
             <h4 class="font-weight-light ">
-                This blog presents the results of a short technological watch about Autonomous Vehicles as part of an exercise of the École Centrale de Lyon Computer Science and Data Science Masters degree. It's goal is to present the state of AV as of March 2020.
+                This blog presents the results of a short technological watch about Autonomous Vehicles as part of an exercise of the École Centrale de Lyon Computer Science and Data Science Masters degree. Its goal is to present the state of AV as of March 2020.
             </h4>
         </div>
     </header>
